# locker-project

./: locker.sqlite3  locker.sqlite3.reset-backup  pyproject.toml  requirements.txt
locker/: .env  admin.py  db.py  locker.sqlite3  requirements.txt  settings.json  test_app.py  test_hostname_connectivity.py  web.py
locker/device/: __init__.py  background_jobs.py  esp32.py  esp32_firmware_phase2.ino  mock.py  recent code
locker/public/: index.html
locker/templates/: index.html
locker/templates/admin/auth/: login.html
locker/templates/admin/components/: deleteModal.html  guestModal.html  pendingModal.html  renewModal.html  sidebar.html
locker/templates/admin/layout/: admin.html
locker/templates/admin/pages/: admin_access_logs.html  admin_activity.html  admin_analytics.html  admin_dashboard.html  admin_ir_logs.html  admin_lockers.html  admin_management.html  admin_members.html  admin_payments.html  admin_pending.html  admin_reports.html  admin_rfid.html  admin_settings.html
locker/templates/components/: registeredModal.html
locker/templates/layouts/: base.html
locker/templates/pages/: member_locker.html  user_access.html  user_enroll_fingerprint.html  user_register.html  user_registered_success.html  user_select_locker.html
scripts/database/: 01_diagnose.py  02_maintenance.py  03_locker_assignment.py  04_migrate_10to4_lockers.py  05_fix_pending_members.py  06_fix_fingerprint_uid.py  README.md  utils.py
scripts/debug/: README.md  inspect_database.py  test_auto_deletion.py
